syntax = "proto3";

option go_package = "hackerdom.com/models";

package models;

service Kleptophobia {
  rpc Register (RegisterReq) returns (RegisterRsp) {}
  rpc GetPublicInfo (GetByUsernameReq) returns (GetPublicInfoRsp) {}
  rpc GetEncryptedFullInfo (GetByUsernameReq) returns (GetEncryptedFullInfoRsp) {}
  rpc Ping (PingBody) returns (PingBody) {}
}

message PingBody {
  string message = 1;
}

message GetByUsernameReq {
    string username = 1;
}

message GetPublicInfoRsp {
    enum Status {
      OK = 0;
      FAIL = 1;
    }
    Status status = 1;
    optional string message = 2;
    optional PublicPerson person = 3;
}

message GetEncryptedFullInfoRsp {
    enum Status {
      OK = 0;
      FAIL = 1;
    }
    Status status = 1;
    optional string message = 2;
    optional bytes encryptedFullInfo = 3;
}


message RegisterReq {
  PrivatePerson person = 1;
  string password = 2;
}

message RegisterRsp {
  enum Status {
    OK = 0;
    FAIL = 1;
  }
  Status status = 1;
  optional string message = 2;
}

message PrivatePerson {
  string first_name = 1;
  optional string middle_name = 2;
  string second_name = 3;
  string username = 4;
  uint32 room = 5;
  string diagnosis = 6;
}

message PublicPerson {
  string first_name = 1;
  string second_name = 2;
  string username = 3;
  uint32 room = 4;
}

message ClientConfig {
  string grpc_host = 1;
  int32 grpc_port = 2;
}

message PGConfig {
  string host = 1;
  int32 port = 2;
  string username = 3;
  string password = 4;
  string db_name = 5;
}

message ServerConfig {
  int32 grpc_port = 1;
  PGConfig pg_config = 2;
}
